--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,6 +63,17 @@
     </div>
   </div>
 
+  <!-- About Us Button (bottom-left) -->
+  <div class="container">
+    <div class="row">
+      <div class="col-12 text-start mb-5">
+        <a href="about.html" class="btn btn-info text-white" style="position: relative; left: 0; bottom: 0;">
+          About Us
+        </a>
+      </div>
+    </div>
+  </div>
+
   <!-- Bootstrap JS (optional) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
