Changed routing from homepage > members to homepage > profile

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
 
     <% if (authenticated) { %>
       <h2 class="mt-5">Hello, <%= username %>!</h2>
-      <a href="/members" class="btn btn-primary mt-3">Go to Members Page</a>
+      <a href="/profile" class="btn btn-primary mt-3">Go to Profile Page</a>
     <% } else { %>
       <h2 class="mt-5">Welcome to our site!</h2>
       <div class="d-flex justify-content-center gap-3 mt-3">
