--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,12 @@
 
     <% if (authenticated) { %>
       <h2 class="mt-5">Hello, <%= username %>!</h2>
-      <a href="/profile" class="btn btn-primary mt-3">Go to Profile Page</a>
+      <a href="/profile" class="btn btn-primary mt-3">Go to Profile Page</a><br>
+
+      <% if (user && user.user_type === 'admin') { %>
+        <a href="/admin" class="btn btn-primary mt-3">Go to Admin Page</a>
+    <% } %>
+
     <% } else { %>
       <h2 class="mt-5">Welcome to our site!</h2>
       <div class="d-flex justify-content-center gap-3 mt-3">
