--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,11 +18,14 @@
 
     <% if (authenticated) { %>
       <h2 class="mt-5">Hello, <%= username %>!</h2>
-      <a href="/profile" class="btn btn-primary mt-3">Go to Profile Page</a><br>
-
-      <% if (user && user.user_type === 'admin') { %>
-        <a href="/admin" class="btn btn-primary mt-3">Go to Admin Page</a>
-    <% } %>
+      <div class="d-flex gap-3 mt-3">
+        <a href="/profile" class="btn btn-primary">Go to Profile Page</a>
+        
+        <% if (user && user.user_type === 'admin') { %>
+          <a href="/admin" class="btn btn-primary">Go to Admin Page</a>
+        <% } %>
+      </div>
+    <% } %>    
 
     <% } else { %>
       <h2 class="mt-5">Welcome to our site!</h2>
