--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,15 +18,13 @@
 
     <% if (authenticated) { %>
       <h2 class="mt-5">Hello, <%= username %>!</h2>
-      <div class="d-flex gap-3 mt-3">
+      <div class="d-flex gap-3 mt-3 justify-content-center">
         <a href="/profile" class="btn btn-primary">Go to Profile Page</a>
         
         <% if (user && user.user_type === 'admin') { %>
-          <a href="/admin" class="btn btn-primary">Go to Admin Page</a>
+          <a href="/admin" class="btn btn-warning text-dark">Go to Admin Page</a>
         <% } %>
       </div>
-    <% } %>    
-
     <% } else { %>
       <h2 class="mt-5">Welcome to our site!</h2>
       <div class="d-flex justify-content-center gap-3 mt-3">
