Made admin button blue

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
         <a href="/profile" class="btn btn-primary">Go to Profile Page</a>
         
         <% if (user && user.user_type === 'admin') { %>
-          <a href="/admin" class="btn btn-warning text-dark">Go to Admin Page</a>
+          <a href="/admin" class="btn btn-primary">Go to Admin Page</a>
         <% } %>
       </div>
     <% } else { %>
