--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
         <% } %>
       </div>
     <% } else { %>
-      <h2 class="mt-5">Welcome to our site!</h2>
+      <h2 class="mt-5">Welcome to our awesome site!</h2>
       <div class="d-flex justify-content-center gap-3 mt-3">
         <a href="/signup" class="btn btn-warning text-dark">Sign Up</a>
         <a href="/login" class="btn btn-outline-primary">Log In</a>
