--- a/views/404.ejs
+++ b/views/404.ejs
@@ -6,8 +6,14 @@
     <title>404 - Page Not Found</title>
 </head>
 <body>
+
+    <%- include('templates/header') %>
+
     <h1>404 - Page Not Found</h1><br>
     <p>Oops! The page you're looking for doesn't exist.</p><br>
     <a href="/">Go to Home</a>
 </body>
+
+<%- include('templates/footer') %>
+
 </html>
