--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,3 +1,5 @@
+<%- include('templates/header') %>
+
 <div class="container mt-5">
     <h1>Admin Dashboard</h1>
     <table class="table table-bordered mt-4">
@@ -31,3 +33,5 @@
       </tbody>
     </table>
   </div>
+
+  <%- include('templates/footer') %>
