--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,19 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Page Not Found</title>
-</head>
-<body>
+<%- include('templates/header', { title }) %>
 
-    <%- include('templates/header') %>
-
-    <h1>404 - Page Not Found</h1><br>
-    <p>Oops! The page you're looking for doesn't exist.</p><br>
-    <a href="/">Go to Home</a>
-</body>
+<div class="container mt-5 text-center">
+  <h1 class="display-4 text-danger">404 - Page Not Found</h1>
+  <p class="lead">Oops! The page you're looking for doesn't exist.</p>
+  <a href="/" class="btn btn-primary mt-3">Return Home</a>
+</div>
 
 <%- include('templates/footer') %>
-
-</html>
