--- a/views/createPoll.ejs
+++ b/views/createPoll.ejs
@@ -8,6 +8,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+
+  <%- include('templates/header') %>
+
   <div class="container py-5">
     <div class="row justify-content-center">
       <div class="col-lg-8">
@@ -71,6 +74,8 @@
       </div>
     </div>
   </div>
+
+  <%- include('templates/footer') %>
 
   <!-- Bootstrap JS (Optional for functionality like dropdowns) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
