Added route to about us page in app.js

--- a/views/403.ejs
+++ b/views/403.ejs
@@ -18,7 +18,7 @@
     <h1 class="display-4 text-danger">403 - Forbidden</h1>
     <p class="lead">You are not authorized to access this page.</p>
     <a href="/" class="btn btn-primary mt-3">Return to Home</a>
-  </div>
+  </div><br><br>
 
   <%- include('templates/footer') %>
 
