--- a/views/404.ejs
+++ b/views/404.ejs
@@ -18,7 +18,7 @@
     <h1 class="display-4 text-danger">404 - Page Not Found</h1>
     <p class="lead">Oops! The page you're looking for doesn't exist.</p>
     <a href="/" class="btn btn-primary mt-3">Return Home</a>
-  </div>
+  </div><br><br>
 
   <%- include('templates/footer') %>
 
