Feature boxes fixed and sizes made consistent. colours updated

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,45 +38,46 @@
   </div>
 
   <!-- First row of feature boxes -->
-  <div class="container mb-5">
-    <div class="row g-4">
-      <!-- Post Polls (City Workers) -->
-      <div class="col-md-4">
-        <div class="card h-100 border-0 shadow text-white" style="background-color: #f36f21;">
-          <div class="card-body">
-            <h4 class="card-title fw-bold">Post Polls</h4>
-            <p class="card-text">City officials can easily post interactive polls to gather public input and drive informed decisions.</p>
-          </div>
+<div class="container mb-5">
+  <div class="row g-4">
+    <!-- Post Polls (City Workers) -->
+    <div class="col-md-4">
+      <div class="card h-100 border-0 shadow text-white" style="background-color: #f36f21;">
+        <div class="card-body">
+          <h4 class="card-title fw-bold">Post Polls</h4>
+          <p class="card-text">City officials can easily post interactive polls to gather public input and drive informed decisions.</p>
         </div>
       </div>
+    </div>
 
-      <!-- Vote on Polls (Citizens) -->
-      <div class="col-md-4">
-        <div class="card h-100 border-0 shadow text-white" style="background-color: #00bfff;">
-          <div class="card-body">
-            <h4 class="card-title fw-bold">Vote on Local Projects</h4>
-            <p class="card-text">Citizens can cast votes on projects that matter to them, shaping the future of their communities.</p>
-          </div>
+    <!-- Vote on Polls (Citizens) -->
+    <div class="col-md-4">
+      <div class="card h-100 border-0 shadow text-white" style="background-color: #00bfff;">
+        <div class="card-body">
+          <h4 class="card-title fw-bold">Vote on Local Projects</h4>
+          <p class="card-text">Citizens can cast votes on projects that matter to them, shaping the future of their communities.</p>
         </div>
       </div>
+    </div>
 
-      <!-- Save & Filter Polls -->
-      <div class="col-md-4">
-        <div class="card h-100 border-0 shadow text-dark" style="background-color: #fcd34d;">
-          <div class="card-body">
-            <h4 class="card-title fw-bold">Save & Filter Polls</h4>
-            <p class="card-text">Bookmark your favorite polls and apply filters to easily return and engage at your convenience.</p>
-          </div>
+    <!-- Save & Filter Polls -->
+    <div class="col-md-4">
+      <div class="card h-100 border-0 shadow text-dark" style="background-color: #fcd34d;">
+        <div class="card-body">
+          <h4 class="card-title fw-bold">Save & Filter Polls</h4>
+          <p class="card-text">Bookmark your favorite polls and apply filters to easily return and engage at your convenience.</p>
         </div>
       </div>
     </div>
   </div>
+</div>
 
-  <!-- Second row of feature boxes -->
-  <div class="row g-4 mt-4">
+<!-- Second row of feature boxes -->
+<div class="container mb-5">
+  <div class="row g-4">
     <!-- Add Tags to Polls (City Workers) -->
     <div class="col-md-4">
-      <div class="card h-100 border-0 shadow" style="background-color: #ff5722;">
+      <div class="card h-100 border-0 shadow text-dark" style="background-color: #8dc872;">
         <div class="card-body">
           <h4 class="card-title fw-bold">Add Tags to Polls</h4>
           <p class="card-text">City officials can add tags to polls to help citizens easily identify the relevance and benefits of participating.</p>
@@ -86,7 +87,7 @@
 
     <!-- View Past Polls (City Workers) -->
     <div class="col-md-4">
-      <div class="card h-100 border-0 shadow" style="background-color: #9c27b0;">
+      <div class="card h-100 border-0 shadow text-white" style="background-color: #9c27b0;">
         <div class="card-body">
           <h4 class="card-title fw-bold">View Past Polls</h4>
           <p class="card-text">City officials can view past polls on their profile page for easy access and reference to previous campaigns.</p>
@@ -96,7 +97,7 @@
 
     <!-- Log In for Personalized Experience (Citizens) -->
     <div class="col-md-4">
-      <div class="card h-100 border-0 shadow" style="background-color: #3f51b5;">
+      <div class="card h-100 border-0 shadow text-white" style="background-color: #3f51b5;">
         <div class="card-body">
           <h4 class="card-title fw-bold">Log In for Personalized Experience</h4>
           <p class="card-text">Citizens can log in to have a personalized experience with the app, including tracking polls and preferences.</p>
@@ -104,7 +105,7 @@
       </div>
     </div>
   </div>
-</div>
+</div><br><br>
 
   <!-- About Us Button (bottom-left) -->
   <div class="container">
