The two main feature boxes (posting polls and voting on them) now link to createpoll and main respectively. still no authentication around this

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,22 +42,26 @@
   <div class="row g-4">
     <!-- Post Polls (City Workers) -->
     <div class="col-md-4">
-      <div class="card h-100 border-0 shadow text-white" style="background-color: #f36f21;">
-        <div class="card-body">
-          <h4 class="card-title fw-bold">Post Polls</h4>
-          <p class="card-text">City officials can easily post interactive polls to gather public input and drive informed decisions.</p>
+      <a href="/createpoll" class="text-decoration-none">
+        <div class="card h-100 border-0 shadow text-white" style="background-color: #f36f21;">
+          <div class="card-body">
+            <h4 class="card-title fw-bold">Post Polls</h4>
+            <p class="card-text">City officials can easily post interactive polls to gather public input and drive informed decisions.</p>
+          </div>
         </div>
-      </div>
+      </a>
     </div>
 
     <!-- Vote on Polls (Citizens) -->
     <div class="col-md-4">
-      <div class="card h-100 border-0 shadow text-white" style="background-color: #00bfff;">
-        <div class="card-body">
-          <h4 class="card-title fw-bold">Vote on Local Projects</h4>
-          <p class="card-text">Citizens can cast votes on projects that matter to them, shaping the future of their communities.</p>
+      <a href="/main" class="text-decoration-none">
+        <div class="card h-100 border-0 shadow text-white" style="background-color: #00bfff;">
+          <div class="card-body">
+            <h4 class="card-title fw-bold">Vote on Local Projects</h4>
+            <p class="card-text">Citizens can cast votes on projects that matter to them, shaping the future of their communities.</p>
+          </div>
         </div>
-      </div>
+      </a>
     </div>
 
     <!-- Save & Filter Polls -->
