--- a/views/main.ejs
+++ b/views/main.ejs
@@ -9,6 +9,8 @@
   </head>
   <body>
 
+    <%- include('templates/header') %>
+
     <!-- Sidebar Toggle Button -->
     <div class="p-3">
       <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebar">
@@ -47,6 +49,8 @@
         </div>
       </div>
     </main>
+
+    <%- include('templates/footer') %>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
