Made the "you have X new polls to vote on!" button clickable and lead to main page

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -41,7 +41,9 @@
       <p>Your insights help shape local projects. Vote on new polls, share ideas, and see feedback from your neighbors.</p>
 
       <div class="alert text-dark mb-4" style="background-color: #fcd34d;">
+        <a href="/main" class="text-decoration-none">
         You have <strong>3 new polls</strong> to vote on!
+        /</a>
       </div>
 
       <a href="/logout" class="btn text-white" style="background-color: #f36f21;">
