--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -17,13 +17,13 @@
             <a class="nav-link" href="/about" style="color: #FFFFFF;">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/profile" style="color: #FFFFFF;">Profile</a>
+            <a class="nav-link" href="#" style="color: #FFFFFF;">Profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/main" style="color: #FFFFFF;">Main</a>
+            <a class="nav-link" href="#" style="color: #FFFFFF;">Main</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/admin" style="color: #FFFFFF;">Admin</a>
+            <a class="nav-link" href="#" style="color: #FFFFFF;">Admin</a>
           </li>
         </ul>
       </div>
