Made buttons redirect to their own pages after fixing weather data problem

--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #003366;">
     <div class="container-fluid">
       <!-- Name (Could add logo too) -->
-      <a class="navbar-brand" href="/index" style="color: #FFFFFF;">CivIQ</a>
+      <a class="navbar-brand" href="/" style="color: #FFFFFF;">CivIQ</a>
       <!-- Toggler for collapsed navbar on small screens -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -11,19 +11,19 @@
         <ul class="navbar-nav ms-auto">
           <!-- nav links (CHANGE THESE TO PROPER LINKS LATER) -->
           <li class="nav-item">
-            <a class="nav-link" href="#" style="color: #FFFFFF;">Home</a>
+            <a class="nav-link" href="/" style="color: #FFFFFF;">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about" style="color: #FFFFFF;">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" style="color: #FFFFFF;">Profile</a>
+            <a class="nav-link" href="/profile" style="color: #FFFFFF;">Profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" style="color: #FFFFFF;">Main</a>
+            <a class="nav-link" href="/main" style="color: #FFFFFF;">Main</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" style="color: #FFFFFF;">Admin</a>
+            <a class="nav-link" href="/admin" style="color: #FFFFFF;">Admin</a>
           </li>
         </ul>
       </div>
