--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #003366;">
+<nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color: #003366;">
   <div class="container-fluid">
     <!-- Name (Could add logo too) -->
     <a class="navbar-brand" href="/" style="color: #FFFFFF;">CivIQ</a>
