--- a/views/createPoll.ejs
+++ b/views/createPoll.ejs
@@ -11,6 +11,8 @@
 
   <%- include('templates/header') %>
 
+  <!-- TODO: Reference the new polls schema in some sort of way -->
+
   <div class="container py-5">
     <div class="row justify-content-center">
       <div class="col-lg-8">
