Added create poll button to header (only for city officials)

--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -25,7 +25,10 @@
           </li>
           <% if (user.user_type === 'admin') { %>
             <li class="nav-item">
-              <a class="nav-link" href="/admin" style="color: #FFFFFF;">Admin</a>
+              <a class="nav-link" href="/admin" style="color: #FFFFFF;">Admin Dashboard</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/createpoll" style="color: #FFFFFF;">Create Poll</a>
             </li>
           <% } %>
         <% } %>
