Updated button names on admin dashboard

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -29,17 +29,17 @@
       <div class="row g-3">
         <div class="col-12 col-sm-6 col-lg-3">
           <a href="/createpoll" class="btn btn-outline-primary w-100 py-3 px-4 d-flex align-items-center justify-content-center">
-            <i class="bi bi-plus-circle me-2 fs-5"></i> Create Poll
+            <i class="bi bi-plus-circle me-2 fs-5"></i> Create New Poll
           </a>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
           <a href="/managepolls" class="btn btn-outline-warning w-100 py-3 px-4 d-flex align-items-center justify-content-center">
-            <i class="bi bi-sliders me-2 fs-5"></i> Manage Polls
+            <i class="bi bi-sliders me-2 fs-5"></i> Manage Poll Tags
           </a>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
           <a href="/pastpolls" class="btn btn-outline-secondary w-100 py-3 px-4 d-flex align-items-center justify-content-center">
-            <i class="bi bi-clock-history me-2 fs-5"></i> Past Polls
+            <i class="bi bi-clock-history me-2 fs-5"></i> View Past Polls
           </a>
         </div>
         <div class="col-12 col-sm-6 col-lg-3">
