--- a/views/createPoll.ejs
+++ b/views/createPoll.ejs
@@ -20,7 +20,7 @@
           <!-- Poll Question -->
           <div class="mb-3">
             <label for="question" class="form-label">Poll Question</label>
-            <input type="text" class="form-control" id="question" placeholder="Enter the poll question">
+            <input type="text" name="title" class="form-control" id="question" placeholder="Enter the poll question">
           </div>
 
           <!-- Options -->
