Changed /main to /polls in profile.ejs

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -40,7 +40,7 @@
 
       <p>Your insights help shape local projects. Vote on new polls, share ideas, and see feedback from your neighbors.</p>
 
-      <a href="/main" class="text-decoration-none">
+      <a href="/polls" class="text-decoration-none">
         <div class="alert text-dark mb-4" style="background-color: #fcd34d;">
           You have <strong>3 new polls</strong> to vote on!
         </div>
