Initial Commit on dev (week 3)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,7 @@
         <a href="/profile" class="btn btn-primary">Go to Profile Page</a>
         
         <% if (user && user.user_type === 'admin') { %>
-          <a href="/admin" class="btn btn-primary">Go to Admin Page</a>
+          <a href="/admin" class="btn btn-primary">Go to Admin Dashboard</a>
         <% } %>
       </div>
     <% } else { %>
