Clarified buttons to ensure users know these are sort functions

--- a/views/pastpolls.ejs
+++ b/views/pastpolls.ejs
@@ -72,12 +72,12 @@
         <a href="/pastpolls?sort=all" 
            class="btn btn-site-blue text-white" 
            style="<%= (!sort || sort === 'all') ? 'outline: 3px solid #FFD700; outline-offset: 2px;' : '' %>">
-          All
+          Sort by Alphabetical
         </a>
         <a href="/pastpolls?sort=importance" 
            class="btn btn-site-orange text-white" 
            style="<%= (sort === 'importance') ? 'outline: 3px solid #FFD700; outline-offset: 2px;' : '' %>">
-          By Importance
+          Sort by Importance
         </a>
       </div>
 
